--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="/FrontEnd/assets/script.js" defer></script>
 </head>
 <body>
 <header>
@@ -36,10 +37,23 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<!--Ajout des filtres en HTML-->
+		<section class="filters">
+			<button class="filters__btn all">Tout
+			</button>
+			<button class="filters__btn objects">Objets
+			</button>
+			<button class="filters__btn flats">Appartements
+			</button>
+			<button class="filters__btn hotels">Hôtels & restaurants
+			</button>
+		</section>
 		<div class="gallery">
+			<!-- Suppression du HTML qui a été remplaçé par le contenu ajouté
+				dynamiquement par JavaScript
 			<figure>
-				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
+			<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+			<figcaption>Abajour Tahina</figcaption>
 			</figure>
 			<figure>
 				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
@@ -80,7 +94,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure> -->
 		</div>
 	</section>
 	<section id="contact">
