--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,16 +9,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script type="module" src="/FrontEnd/assets/script.js" defer></script>
+	<script type="module" src="assets/script.js" defer></script>
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<a href=""><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a class="nav-links" href="/FrontEnd/index.html#portfolio">projets</a></li>
+			<li><a class="nav-links" href="#contact">contact</a></li>
+			<li id="link-login"><a class="nav-links"></a>login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -109,6 +109,19 @@
 			<textarea name="message" id="message" cols="30" rows="10"></textarea>
 			<input type="submit" value="Envoyer">
 		</form>
+	</section>
+	<section id="login-section">
+		<h2>Log in</h2>
+
+		<form action="login-form" method="post">
+			<label for="emailLogin">Email</label>
+			<input type="email" name="emailLogin" id="emailLogin">
+			<label for="password">Mot de passe</label>
+			<input type="password" name="password">
+			<input type="submit" value="Se connecter">
+			<span class="forgotten">Mot de passe oublié</span>		
+		</form>
+
 	</section>
 </main>
 
