--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -16,8 +19,8 @@
 	<a href=""><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
 		<ul>
-			<li><a class="nav-links" href="/FrontEnd/index.html#portfolio">projets</a></li>
-			<li><a class="nav-links" href="#contact">contact</a></li>
+			<li id="link-projects"><a class="nav-links" href="/FrontEnd/index.html#portfolio">projets</a></li>
+			<li id="link-contact"><a class="nav-links" href="#contact">contact</a></li>
 			<li id="link-login"><a class="nav-links"></a>login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
@@ -36,7 +39,8 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="projects-title"><h2>Mes Projets</h2></div>
+		
 		<!--Ajout des filtres en HTML-->
 		<section class="filters">
 			<button class="filters__btn all">Tout
@@ -111,7 +115,7 @@
 		</form>
 	</section>
 	<section id="login-section">
-		<h2>Log in</h2>
+		<h2 class="login-title">Log in</h2>
 		<!-- Action mis en valeur "vide" sinon le navigateur envoyait vers une page avec la valeur "login-form" en fin de path -->
 		<form action="" method="post" id="login-form">
 			<label for="emailLogin">Email</label>
