Added lougout btn

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 <header>
 	<a href=""><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
-		<ul>
+		<ul class="header__nav--ul">
 			<li id="link-projects"><a class="nav-links" href="/FrontEnd/index.html#portfolio">projets</a></li>
 			<li id="link-contact"><a class="nav-links" href="#contact">contact</a></li>
 			<li id="link-login"><a class="nav-links"></a>login</li>
